// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration > Feature #1470: Custom brands > should by handled accordingly 1`] = `
"/** post /v1/custom */
export type PostV1CustomInput = {
  string: boolean;
  regular: string;
};

/** post /v1/custom */
export type PostV1CustomPositiveVariant1 = {
  number: boolean;
};

/** post /v1/custom */
export type PostV1CustomNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/custom";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "post /v1/custom": PostV1CustomInput;
}

export interface PositiveResponse {
  "post /v1/custom": PostV1CustomPositiveVariant1;
}

export interface NegativeResponse {
  "post /v1/custom": PostV1CustomNegativeVariant1;
}

export interface EncodedResponse {
  "post /v1/custom":
    | { status: 200; discriminator: "success"; data: PostV1CustomPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: PostV1CustomNegativeVariant1 };
}

export interface Response {
  "post /v1/custom": EncodedResponse["post /v1/custom"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Named types > should declare the recursive type for each direction when it differs 1`] = `
"export type Type1 = {
  label?: string | undefined;
  children?: Type1[] | undefined;
};

/** post /v1/tree */
export type PostV1TreeInput = {
  node: Type1;
};

export type Type2 = {
  label: string;
  children?: Type2[] | undefined;
};

/** post /v1/tree */
export type PostV1TreePositiveVariant1 = {
  node: Type2;
};

/** post /v1/tree */
export type PostV1TreeNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/tree";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "post /v1/tree": PostV1TreeInput;
}

export interface PositiveResponse {
  "post /v1/tree": PostV1TreePositiveVariant1;
}

export interface NegativeResponse {
  "post /v1/tree": PostV1TreeNegativeVariant1;
}

export interface EncodedResponse {
  "post /v1/tree":
    | { status: 200; discriminator: "success"; data: PostV1TreePositiveVariant1 }
    | { status: 400; discriminator: "error"; data: PostV1TreeNegativeVariant1 };
}

export interface Response {
  "post /v1/tree": EncodedResponse["post /v1/tree"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Named types > should declare the schemas having id once and refer them 1`] = `
"/** get /v1/list */
export type GetV1ListInput = {};

export type Customer = {
  name: string;
};

export type Booking = {
  id: string;
  customer: Customer;
  notes?: string | undefined;
};

/** get /v1/list */
export type GetV1ListPositiveVariant1 = {
  items: Booking[];
};

/** get /v1/list */
export type GetV1ListNegativeVariant1 = {
  message: string;
};

export type SaveBookingRequest = {
  customer: Customer;
};

/** post /v1/save */
export type PostV1SaveNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/list" | "/v1/save";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "get /v1/list": GetV1ListInput;
  "post /v1/save": SaveBookingRequest;
}

export interface PositiveResponse {
  "get /v1/list": GetV1ListPositiveVariant1;
  "post /v1/save": Booking;
}

export interface NegativeResponse {
  "get /v1/list": GetV1ListNegativeVariant1;
  "post /v1/save": PostV1SaveNegativeVariant1;
}

export interface EncodedResponse {
  "get /v1/list":
    | { status: 200; discriminator: "success"; data: GetV1ListPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: GetV1ListNegativeVariant1 };
  "post /v1/save":
    | { status: 200; discriminator: "success"; data: Booking }
    | { status: 400; discriminator: "error"; data: PostV1SaveNegativeVariant1 };
}

export interface Response {
  "get /v1/list": EncodedResponse["get /v1/list"]["data"];
  "post /v1/save": EncodedResponse["post /v1/save"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Named types > should name the type unless it differs for request and response: both 1`] = `
"export type Type1 = {
  status?: string | undefined;
};

/** post /v1/draft */
export type PostV1DraftInput = {
  draft: Type1;
};

export type Type2 = {
  status: string;
};

/** post /v1/draft */
export type PostV1DraftPositiveVariant1 = {
  draft: Type2;
};

/** post /v1/draft */
export type PostV1DraftNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/draft";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "post /v1/draft": PostV1DraftInput;
}

export interface PositiveResponse {
  "post /v1/draft": PostV1DraftPositiveVariant1;
}

export interface NegativeResponse {
  "post /v1/draft": PostV1DraftNegativeVariant1;
}

export interface EncodedResponse {
  "post /v1/draft":
    | { status: 200; discriminator: "success"; data: PostV1DraftPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: PostV1DraftNegativeVariant1 };
}

export interface Response {
  "post /v1/draft": EncodedResponse["post /v1/draft"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Named types > should name the type unless it differs for request and response: input 1`] = `
"export type Draft = {
  status?: string | undefined;
};

/** post /v1/draft */
export type PostV1DraftInput = {
  draft: Draft;
};

/** post /v1/draft */
export type PostV1DraftPositiveVariant1 = {};

/** post /v1/draft */
export type PostV1DraftNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/draft";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "post /v1/draft": PostV1DraftInput;
}

export interface PositiveResponse {
  "post /v1/draft": PostV1DraftPositiveVariant1;
}

export interface NegativeResponse {
  "post /v1/draft": PostV1DraftNegativeVariant1;
}

export interface EncodedResponse {
  "post /v1/draft":
    | { status: 200; discriminator: "success"; data: PostV1DraftPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: PostV1DraftNegativeVariant1 };
}

export interface Response {
  "post /v1/draft": EncodedResponse["post /v1/draft"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Named types > should name the type unless it differs for request and response: output 1`] = `
"/** post /v1/draft */
export type PostV1DraftInput = {};

export type Draft = {
  status: string;
};

/** post /v1/draft */
export type PostV1DraftPositiveVariant1 = {
  draft: Draft;
};

/** post /v1/draft */
export type PostV1DraftNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/draft";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "post /v1/draft": PostV1DraftInput;
}

export interface PositiveResponse {
  "post /v1/draft": PostV1DraftPositiveVariant1;
}

export interface NegativeResponse {
  "post /v1/draft": PostV1DraftNegativeVariant1;
}

export interface EncodedResponse {
  "post /v1/draft":
    | { status: 200; discriminator: "success"; data: PostV1DraftPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: PostV1DraftNegativeVariant1 };
}

export interface Response {
  "post /v1/draft": EncodedResponse["post /v1/draft"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Should support HEAD method by default 0 1`] = `
"/** get /v1/path */
export type GetV1PathInput = Omit<
  {
    session: {};
    some: string;
  },
  /** security cookies */
  "session"
>;

/** get /v1/path */
export type GetV1PathPositiveVariant1 = {};

/** get /v1/path */
export type GetV1PathNegativeVariant1 = {
  message: string;
};

/** head /v1/path */
export type HeadV1PathInput = Omit<
  {
    session: {};
    some: string;
  },
  /** security cookies */
  "session"
>;

/** head /v1/path */
export type HeadV1PathPositiveVariant1 = undefined;

/** head /v1/path */
export type HeadV1PathNegativeVariant1 = undefined;

export type Path = "/v1/path";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "get /v1/path": GetV1PathInput;
  "head /v1/path": HeadV1PathInput;
}

export interface PositiveResponse {
  "get /v1/path": GetV1PathPositiveVariant1;
  "head /v1/path": HeadV1PathPositiveVariant1;
}

export interface NegativeResponse {
  "get /v1/path": GetV1PathNegativeVariant1;
  "head /v1/path": HeadV1PathNegativeVariant1;
}

export interface EncodedResponse {
  "get /v1/path":
    | { status: 200; discriminator: "success"; data: GetV1PathPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: GetV1PathNegativeVariant1 };
  "head /v1/path":
    | { status: 200; discriminator: "success"; data: HeadV1PathPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: HeadV1PathNegativeVariant1 };
}

export interface Response {
  "get /v1/path": EncodedResponse["get /v1/path"]["data"];
  "head /v1/path": EncodedResponse["head /v1/path"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Should support HEAD method by default 1 1`] = `
"/** get /v1/path */
export type GetV1PathInput = Omit<
  {
    session: {};
    some: string;
  },
  /** security cookies */
  "session"
>;

/** get /v1/path */
export type GetV1PathPositiveVariant1 = {};

/** get /v1/path */
export type GetV1PathNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/path";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "get /v1/path": GetV1PathInput;
}

export interface PositiveResponse {
  "get /v1/path": GetV1PathPositiveVariant1;
}

export interface NegativeResponse {
  "get /v1/path": GetV1PathNegativeVariant1;
}

export interface EncodedResponse {
  "get /v1/path":
    | { status: 200; discriminator: "success"; data: GetV1PathPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: GetV1PathNegativeVariant1 };
}

export interface Response {
  "get /v1/path": EncodedResponse["get /v1/path"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Should support multiple response schemas depending on status code 1`] = `
"/** post /v1/mtpl */
export type PostV1MtplInput = {
  test: number;
};

/** post /v1/mtpl */
export type PostV1MtplPositiveVariant1 = {
  status: "ok";
  data: {
    payload: string;
  };
};

/** post /v1/mtpl */
export type PostV1MtplPositiveVariant2 = {
  status: "kinda";
  data: {
    payload: string;
  };
};

/** post /v1/mtpl */
export type PostV1MtplNegativeVariant1 = "error";

/** post /v1/mtpl */
export type PostV1MtplNegativeVariant2 = "failure";

export type Path = "/v1/mtpl";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "post /v1/mtpl": PostV1MtplInput;
}

export interface PositiveResponse {
  "post /v1/mtpl": PostV1MtplPositiveVariant1 | PostV1MtplPositiveVariant2;
}

export interface NegativeResponse {
  "post /v1/mtpl": PostV1MtplNegativeVariant1 | PostV1MtplNegativeVariant2;
}

export interface EncodedResponse {
  "post /v1/mtpl":
    | { status: 200; discriminator: "success"; data: PostV1MtplPositiveVariant1 }
    | { status: 201; discriminator: "success"; data: PostV1MtplPositiveVariant2 }
    | { status: 400; discriminator: "error"; data: PostV1MtplNegativeVariant1 }
    | { status: 500; discriminator: "error"; data: PostV1MtplNegativeVariant2 };
}

export interface Response {
  "post /v1/mtpl": EncodedResponse["post /v1/mtpl"]["data"];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Should support types variant and handle recursive schemas 0 1`] = `
"export type Type1 = {
    name: string;
    features: Type1;
};

/** query /v1/test */
export type QueryV1TestInput = {
    features: Type1;
};

/** query /v1/test */
export type QueryV1TestPositiveVariant1 = {};

/** query /v1/test */
export type QueryV1TestNegativeVariant1 = {
    message: string;
};

export type Path = "/v1/test";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  /** @deprecated */
  "query /v1/test": QueryV1TestInput;
}

export interface PositiveResponse {
  /** @deprecated */
  "query /v1/test": QueryV1TestPositiveVariant1;
}

export interface NegativeResponse {
  /** @deprecated */
  "query /v1/test": QueryV1TestNegativeVariant1;
}

export interface EncodedResponse {
  /** @deprecated */
  "query /v1/test": { status: 200, discriminator: "success", data: QueryV1TestPositiveVariant1 } | { status: 400, discriminator: "error", data: QueryV1TestNegativeVariant1 };
}

export interface Response {
  /** @deprecated */
  "query /v1/test": EncodedResponse["query /v1/test"]["data"];
}

export type Request = keyof Input;"
`;

exports[`Integration > Should support types variant and handle recursive schemas 1 1`] = `
"export type Type1 = {
    name: string;
    features: Type1;
};

/** query /v1/test */
export type QueryV1TestInput = {
    features: Type1;
};

/** query /v1/test */
export type QueryV1TestPositiveVariant1 = {};

/** query /v1/test */
export type QueryV1TestNegativeVariant1 = {
    message: string;
};

export type Path = "/v1/test";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  /** @deprecated */
  "query /v1/test": QueryV1TestInput;
}

export interface PositiveResponse {
  /** @deprecated */
  "query /v1/test": QueryV1TestPositiveVariant1;
}

export interface NegativeResponse {
  /** @deprecated */
  "query /v1/test": QueryV1TestNegativeVariant1;
}

export interface EncodedResponse {
  /** @deprecated */
  "query /v1/test": { status: 200, discriminator: "success", data: QueryV1TestPositiveVariant1 } | { status: 400, discriminator: "error", data: QueryV1TestNegativeVariant1 };
}

export interface Response {
  /** @deprecated */
  "query /v1/test": EncodedResponse["query /v1/test"]["data"];
}

export type Request = keyof Input;"
`;

exports[`Integration > Should treat optionals the same way as z.infer() by default 1`] = `
"/** post /v1/test-with-dashes */
export type PostV1TestWithDashesInput = {
  opt?: string | undefined;
};

/** post /v1/test-with-dashes */
export type PostV1TestWithDashesPositiveVariant1 = {
  similar?: number | undefined;
};

/** post /v1/test-with-dashes */
export type PostV1TestWithDashesNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/test-with-dashes";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "query" | "head";

export interface Input {
  "post /v1/test-with-dashes": PostV1TestWithDashesInput;
}

export interface PositiveResponse {
  "post /v1/test-with-dashes": PostV1TestWithDashesPositiveVariant1;
}

export interface NegativeResponse {
  "post /v1/test-with-dashes": PostV1TestWithDashesNegativeVariant1;
}

export interface EncodedResponse {
  "post /v1/test-with-dashes":
    | { status: 200; discriminator: "success"; data: PostV1TestWithDashesPositiveVariant1 }
    | { status: 400; discriminator: "error"; data: PostV1TestWithDashesNegativeVariant1 };
}

export interface Response {
  "post /v1/test-with-dashes": EncodedResponse["post /v1/test-with-dashes"]["data"];
}

export type Request = keyof Input;

export const endpointTags = {
  "post /v1/test-with-dashes": [],
};

const parseRequest = (request: string) => request.split(/ (.+)/, 2) as [Method, Path];

const substitute = (path: string, params: Record<string, any>): [typeof path, typeof params] => {
  if (params instanceof Blob) return [path, params] as const;
  const rest = { ...params };
  for (const key in params) {
    path = path.replace(\`:\${key}\`, () => {
      delete rest[key];
      return params[key];
    });
  }
  return [path, rest] as const;
};

export type Implementation<T extends Record<string, unknown>> = (
  method: Method,
  path: string,
  params: Record<string, any>,
  ctx?: T,
) => Promise<{ status: number; data: any }>;

export type Pagination =
  | { nextCursor: string | null }
  | { total: number; limit: number; offset: number };

export type DefaultContext = { override?: (init: RequestInit) => RequestInit };

const defaultImplementation: Implementation<DefaultContext> = async (method, path, params, ctx) => {
  const isBlob = params instanceof Blob;
  const hasFiles =
    !isBlob && Object.values(params).some((one) => one instanceof Blob || one instanceof File);
  const hasBody = !["get", "head", "delete"].includes(method);
  const searchParams = isBlob || hasBody ? "" : \`?\${new URLSearchParams(params)}\`;
  const headers =
    !hasBody || hasFiles
      ? undefined
      : { "Content-Type": isBlob ? "application/octet-stream" : "application/json" };
  let body: RequestInit["body"] = undefined;
  if (hasBody) {
    if (isBlob) {
      body = params;
    } else if (hasFiles) {
      body = new FormData();
      for (const [key, value] of Object.entries(params))
        if (value !== undefined) body.append(key, value);
    } else {
      body = JSON.stringify(params);
    }
  }
  let init: RequestInit = {
    method: method.toUpperCase(),
    credentials: undefined,
    headers,
    body,
  };
  if (ctx?.override) init = ctx.override(init);
  const response = await fetch(new URL(\`\${path}\${searchParams}\`, "https://example.com"), init);
  const { status } = response;
  const contentType = response.headers.get("content-type");
  if (method === "head" || !contentType) return { status, data: undefined };
  const data = await (contentType.startsWith("application/json")
    ? response.json()
    : contentType.startsWith("text/")
      ? response.text()
      : response.blob());
  return { status, data };
};

export class Client<T extends Record<string, unknown> = DefaultContext> {
  public constructor(
    protected readonly implementation: Implementation<T> = defaultImplementation,
  ) {}
  public async provide<K extends Request>(
    request: K,
    params: Input[K],
    ctx?: T,
  ): Promise<EncodedResponse[K]> {
    const [method, path] = parseRequest(request);
    const { status, data } = await this.implementation(method, ...substitute(path, params), ctx);
    const discriminator = Client.discriminate(status);
    return { status, data, discriminator } as EncodedResponse[K];
  }
  public static hasMore(response: Pagination): boolean {
    if ("nextCursor" in response) return response.nextCursor !== null;
    return response.offset + response.limit < response.total;
  }
  public static discriminate(status: number): "success" | "error" {
    return status < 400 ? "success" : "error";
  }
}

export class Subscription<
  K extends Extract<Request, \`get \${string}\`>,
  R extends Extract<PositiveResponse[K], { event: string }>,
> {
  public source: EventSource;
  public constructor(request: K, params: Input[K]) {
    const [path, rest] = substitute(parseRequest(request)[1], params);
    const searchParams = \`?\${new URLSearchParams(rest)}\`;
    this.source = new EventSource(new URL(\`\${path}\${searchParams}\`, "https://example.com"), {
      withCredentials: undefined,
    });
  }
  public on<E extends R["event"]>(
    event: E,
    handler: (data: Extract<R, { event: E }>["data"]) => void | Promise<void>,
  ) {
    this.source.addEventListener(event, (msg) => handler(JSON.parse((msg as MessageEvent).data)));
    return this;
  }
}

// Usage example:
/*
const client = new Client();
const { status, discriminator, data } = await client.provide("get /v1/user/retrieve", { id: "10" });
if (status === 200) console.log(data.name); // success
else if (status === 400 || discriminator === "error") console.error(data.message); // error
new Subscription("get /v1/events/stream", {}).on("time", (time) => {});
*/
"
`;
